fixed webpack .map not a function error by removing outer curly braces from .json file, updated task mapping on TaskList and TaskCard, updated layout. Committing before I do too much and break something else.

--- a/Day21_RECAP_DAY/suzyq-to-do/src/App.css
+++ b/Day21_RECAP_DAY/suzyq-to-do/src/App.css
@@ -1,5 +1,5 @@
 * {
-  outline: 0px solid red;
+  outline: 1px solid red;
   text-align: center;
   font-family: Poppins;
 }
